clusters/apps/workloads/homarr/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
